--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ async-generator==1.10
 attrs==20.2.0
 backcall==0.2.0
 bleach==3.2.1
+bokeh==2.2.1
 certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
+cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
@@ -25,7 +27,9 @@ jupyter-client==6.1.7
 jupyter-console==6.2.0
 jupyter-core==4.6.3
 jupyterlab-pygments==0.1.2
+kiwisolver==1.2.0
 MarkupSafe==1.1.1
+matplotlib==3.3.2
 mistune==0.8.4
 nbclient==0.5.0
 nbconvert==6.0.7
@@ -34,10 +38,12 @@ nest-asyncio==1.4.1
 notebook==6.1.4
 numpy==1.19.2
 packaging==20.4
+pandas==1.1.3
 pandocfilters==1.4.2
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==7.2.0
 prometheus-client==0.8.0
 prompt-toolkit==3.0.7
 ptyprocess==0.6.0
@@ -46,12 +52,15 @@ Pygments==2.7.1
 pyparsing==2.4.7
 pyrsistent==0.17.3
 python-dateutil==2.8.1
+pytz==2020.1
+PyYAML==5.3.1
 pyzmq==19.0.2
 qtconsole==4.7.7
 QtPy==1.9.0
 requests==2.24.0
 scikit-learn==0.23.2
 scipy==1.5.2
+seaborn==0.11.0
 Send2Trash==1.5.0
 six==1.15.0
 terminado==0.9.1
@@ -59,6 +68,7 @@ testpath==0.4.4
 threadpoolctl==2.1.0
 tornado==6.0.4
 traitlets==5.0.4
+typing-extensions==3.7.4.3
 urllib3==1.25.10
 wcwidth==0.2.5
 webencodings==0.5.1
