--- a/requirements.txt
+++ b/requirements.txt
@@ -20,13 +20,15 @@ ipython-genutils==0.2.0
 ipywidgets==7.5.1
 jedi==0.17.2
 Jinja2==2.11.2
-joblib==0.17.0
+json5==0.9.5
 jsonschema==3.2.0
 jupyter==1.0.0
 jupyter-client==6.1.7
 jupyter-console==6.2.0
 jupyter-core==4.6.3
+jupyterlab==2.2.8
 jupyterlab-pygments==0.1.2
+jupyterlab-server==1.2.0
 kiwisolver==1.2.0
 MarkupSafe==1.1.1
 matplotlib==3.3.2
@@ -58,14 +60,12 @@ pyzmq==19.0.2
 qtconsole==4.7.7
 QtPy==1.9.0
 requests==2.24.0
-scikit-learn==0.23.2
 scipy==1.5.2
 seaborn==0.11.0
 Send2Trash==1.5.0
 six==1.15.0
 terminado==0.9.1
 testpath==0.4.4
-threadpoolctl==2.1.0
 tornado==6.0.4
 traitlets==5.0.4
 typing-extensions==3.7.4.3
